# CI-CD-with-Databricks-Asset-Bundles

./: CI CD with Databricks Asset Bundles.md
.github/workflows/: cicd.yml
init_project/: databricks.yml
init_project/.github/workflows/: cicd.yml
init_project/clusters/: dab_cluster.yml
init_project/dab/: README.md  databricks.yml  pyproject.toml
init_project/dab/resources/: job_2.job.yml
init_project/resources/: job_1.job.yml
init_project/src/: sample_notebook_1.ipynb  sample_notebook_2.ipynb  sample_notebook_3.ipynb  sample_notebook_4.ipynb
init_project/src/init_project/: main.py
init_project/tests/: sample_taxis_test.py
init_project/wheel_package/: README.md  databricks.yml  pyproject.toml
init_project/wheel_package/resources/: sample_job.job.yml
init_project/wheel_package/src/: sample_notebook.ipynb
init_project/wheel_package/src/wheel_package/: main.py
init_project/wheel_package/tests/: sample_taxis_test.py
init_project/wheel_poetry/: README.md  databricks.yml  pyproject.toml
init_project/wheel_poetry/resources/: sample_job.job.yml
init_project/wheel_poetry/src/: sample_notebook.ipynb
init_project/wheel_poetry/src/wheel_poetry/: main.py
init_project/wheel_poetry/tests/: sample_taxis_test.py
init_project/wheel_uv/: README.md  databricks.yml  pyproject.toml
init_project/wheel_uv/resources/: sample_job.job.yml  wheel_uv_etl.pipeline.yml
init_project/wheel_uv/src/: sample_notebook.ipynb
init_project/wheel_uv/src/wheel_uv/: main.py
init_project/wheel_uv/tests/: sample_taxis_test.py
(+3 files in other folders)
